Fix logo icon on Firefox

--- a/css/app.sass
+++ b/css/app.sass
@@ -30,7 +30,7 @@ $yellow: #FFEB3B
   background: url("/images/overlay.png"), linear-gradient(45deg, #388E3C 15%, #43A047 85%)
 
 .nav-item img
-  padding-left: 12px
+  margin-left: 12px
   margin-right: 6px
 
 .image.is-screenshot img
